# NMDAR_paper

./: .gitignore  README.md  config.toml  prueba.py  pyproject.toml
data/processed/: alexis_combined.parquet  alexis_drug_combined.parquet  auditory_2AFC.parquet  hernando.parquet  tiffany.parquet  tiffany_complete.parquet
docs/superpowers/plans/: 2026-04-17-adapter-default-regressors.md
figures/: Figure 1.ipynb  example.py  figure1.py  figure2.py
illustrations/: glm.tex
notebooks/: glm.py  glmhmm.py  glmhmm_pairwise_comparison.py  model_comparison.py
results/fits/2AFC/glm/alexis test with lapses/: 325_glm_arrays.npz  325_glm_metrics.parquet  326_glm_arrays.npz  326_glm_metrics.parquet  327_glm_arrays.npz  327_glm_metrics.parquet  329_glm_arrays.npz  329_glm_metrics.parquet  330_glm_arrays.npz  330_glm_metrics.parquet  332_glm_arrays.npz  332_glm_metrics.parquet  333_glm_arrays.npz  333_glm_metrics.parquet  335_glm_arrays.npz  335_glm_metrics.parquet  337_glm_arrays.npz  337_glm_metrics.parquet  419_glm_arrays.npz  419_glm_metrics.parquet  420_glm_arrays.npz  420_glm_metrics.parquet  422_glm_arrays.npz  422_glm_metrics.parquet  561_glm_arrays.npz  561_glm_metrics.parquet  616_glm_arrays.npz  616_glm_metrics.parquet  617_glm_arrays.npz  617_glm_metrics.parquet  619_glm_arrays.npz  619_glm_metrics.parquet  623_glm_arrays.npz  623_glm_metrics.parquet  807_glm_arrays.npz  807_glm_metrics.parquet  820_glm_arrays.npz  820_glm_metrics.parquet  821_glm_arrays.npz  821_glm_metrics.parquet  (+11 more)
results/fits/2AFC/glm/base_lapses/: 325.0_glm_arrays.npz  (+106 more)
results/fits/2AFC/glmhmm/: config.json
results/fits/MCDR/glmhmm/: config.json
src/: utils.py
src/parsing/: parse_balma11.py  parse_tiffany.py
src/plots/: MCDR.py  common.py  mcdr_accuracy.py  nuo_auditory.py  two_afc.py  two_afc_delay.py
src/process/: MCDR.py  __init__.py  _choice_tau.py  common.py  mcdr_accuracy.py  mcdr_old.py  nuo_auditory.py  two_afc.py  two_afc_delay.py  two_afc_drug.py
styles/: paper.mplstyle
tests/: test_integration_map.py  test_mcdr_glm.py  test_nuo_auditory_glm.py  test_two_afc_delay_glm.py  test_two_afc_glm.py
(+1019 files in other folders)
