[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmdar-paper"
version = "0.1.0"
description = "Analysis notebooks and task adapters for the NMDAR paper."
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "bottleneck>=1.6.0",
    "glmhmmt==0.1.24",
    "marimo==0.23.2",
    "marimo-toml-editor>=0.1.1",
    "numexpr>=2.14.1",
    "plot-saver==0.1.5",
    "tensorflow-probability==0.25.0",
    "tfp-nightly==0.26.0.dev20260205",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

exclude-dependencies = ["tensorflow-probability"]
